apps/nginx-harbor/service-harbor.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-harbor
  namespace: platform
spec:
  selector:
    app: nginx-harbor
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30007
